fix spacing with flexbot

--- a/src/SuggestedLinks.css
+++ b/src/SuggestedLinks.css
@@ -6,7 +6,7 @@
   border-width: 5px;
   border-radius: 5px;
   padding: 20px;
-  margin: 20px;
+  margin: 20px 20px 10px 20px;
 }
 
 .heading {
@@ -14,6 +14,7 @@
 }
 
 .linkItem {
+  margin-top: 10px;
   display: flex;
   align-content: flex-start;
 }
@@ -25,6 +26,8 @@
 
 .linkTitle {
   display: flex;
+  flex-direction: column;
+  align-self: center;
 }
 
 .title {
